[KLC-1201] Add userKDA endpoint on node (#893)
* Add GetUserKDA to node Facade

* add path to node API

* update swagger

* add tests

* fix routes and add coverage tests

* remove comment on tests

* Add GetUserKDA tests

* update swagger

* remove duplicated errors tests

* sonarqube cilint
